# tmc

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
docs/: vm-architecture.md
examples/: anbn.tm  anbn.tmc  starts-with-a.tm  starts-with-a.tmc  triangular.tm  triangular.tmc
include/tmc/: codegen.hpp  hlcompiler.hpp  ir.hpp  optimizer.hpp  parser.hpp  simulator.hpp
reports/: hw3a_report.tex  mapping.txt
scripts/: bench_submissions.py  gen_report.py  gen_triangle_large.py  run_benchmarks.py
src/: codegen.cpp  hlcompiler.cpp  ir.cpp  main.cpp  optimizer.cpp  parser.cpp  simulator.cpp
submissions/: adan-blanco.tm  alec-clark.tm  brayden-stach.tm  brent-monning.tm  elliott-glenn.tm  ezra-fader.tm  julian-loutzenhiser.tm  minji-kang.tm  public_results.csv  public_results_full.csv  sebastian-porto.tm  tristan-skerritt.tm
tests/: test_codegen.cpp  test_examples.cpp  test_hlcompiler.cpp  test_hlcompiler_debug.cpp  test_hw3a.cpp  test_ir.cpp  test_parser.cpp  test_simulator.cpp  test_triangular.cpp
tests/fixtures/: hw3a_public.txt  triangle_large_readme.md
